--- a/style.css
+++ b/style.css
@@ -523,20 +523,17 @@ footer {
 
 @media only screen and (min-width: 780px) {
    
-  nav ul li{
+nav ul li{
     
     display: inline-block;
-    flex: auto;
-    font-size: 22px
-
+    font-size: 1.5em;
+    padding: 0 3%;  
 }
     
 .containerNav {
-        
-    display: flex;
-    flex-wrap: nowrap;
+    
     margin-top: 60px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     
 }
 
